Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-27978

Wrong option name in error message when exceeding max_session_mem_used

Details

    Description

      When exceeding max_session_mem_used the error message gives wrong option name max_thread_mem_used instead of max_session_mem_used:

      MariaDB [test]> SET SESSION max_session_mem_used = 8192;
      Query OK, 0 rows affected (0.000 sec)
       
      MariaDB [test]> select * FROM information_schema.processlist;
      ERROR 1290 (HY000): The MariaDB server is running with the --max-thread-mem-used=8192 option so it cannot execute this statement
      

      Attachments

        Activity

          People

            danblack Daniel Black
            hholzgra Hartmut Holzgraefe
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.