MDEV-27978 fix wrong opt name when max_session_mem_used exceeded

Fixed typo in my_malloc_size_cb_func. There is no max-thread-mem-used
option in MariaDB, only max-session-mem-used.